--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-node_modules/
-npm-debug.log
-.DS_Store
-package-lock.json
-
-# VIM Swap Files
-[._]*.s[a-v][a-z]
-[._]*.sw[a-p]
-[._]s[a-v][a-z]
-[._]sw[a-p]
+dist
+node_modules
