--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "preversion": "npm run build",
     "test": "npm run lint && npm run unit && npm run integration",
     "unit": "npx mocha './src/*-unit.js' --reporter spec --require @babel/register testutils.js",
-    "integration": "npx mocha './src/*-integration.js' --reporter spec --require @babel/register testutils.js",
-    "build-worker": "./scripts/worker.sh"
+    "integration": "npx mocha './src/*-integration.js' --reporter spec --require @babel/register testutils.js"
   },
   "repository": {
     "type": "git",
@@ -30,22 +29,20 @@
     "emailjs-tcp-socket": "^2.0.2",
     "emailjs-utf7": "^4.0.1",
     "pako": "^1.0.10",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "tinypool": "^0.8.2"
   },
+  "prettier": "@alloc/prettier-config",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-inline-import": "^3.0.0",
+    "@alloc/prettier-config": "^1.0.0",
+    "@types/ramda": "^0.29.11",
     "chai": "^4.2.0",
     "hoodiecrow-imap": "^2.1.0",
     "mocha": "^7.0.1",
-    "pre-commit": "^1.2.2",
+    "prettier": "^3.2.5",
     "sinon": "^8.0.0",
     "standard": "^13.0.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3"
+    "tsup": "^8.0.2"
   },
   "standard": {
     "globals": [
